--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,6 @@ code {
    transform: scale(1);
    transition :all 0.5s;
 }
+
+
+/* .c2 {background-color:tomato; color:white; padding:3px; border-radius:10px; margin-bottom: 30px;} */
